[fix] 어드민 이벤트 조회 페이징 기능 추가

--- a/src/main/resources/static/css/admin-style.css
+++ b/src/main/resources/static/css/admin-style.css
@@ -385,7 +385,7 @@ button {
     border-radius: 10px;
 }
 
-#blacklistRequestPagination, #blacklistPagination {
+#blacklistRequestPagination, #blacklistPagination, #eventPagination, #couponCreatorPagination {
     max-width: 500px;
     margin: 5px auto 5px auto;
 
