--- a/src/main/resources/templates/admin/event.html
+++ b/src/main/resources/templates/admin/event.html
@@ -75,6 +75,25 @@
 
         </tbody>
     </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item">
+                <a style="color: #8B60C7" class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <div id="eventPagination">
+                <!--            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">1</a></li>-->
+                <!--            <li class="page-item active"><a style="background-color: #8B60C7" class="page-link" href="#">2</a></li>-->
+                <!--            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">3</a></li>-->
+            </div>
+            <li class="page-item">
+                <a style="color: #8B60C7" class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
     <br>
     <h1 style="color: #8B60C7">쿠폰</h1>
     <div class="coupon">
@@ -100,6 +119,25 @@
 
             </tbody>
         </table>
+        <!--        <nav aria-label="Page navigation example">-->
+        <!--            <ul class="pagination">-->
+        <!--                <li class="page-item">-->
+        <!--                    <a style="color: #8B60C7" class="page-link" href="#" aria-label="Previous">-->
+        <!--                        <span aria-hidden="true">&laquo;</span>-->
+        <!--                    </a>-->
+        <!--                </li>-->
+        <!--                <div id="couponCreatorPagination">-->
+        <!--                    &lt;!&ndash;            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">1</a></li>&ndash;&gt;-->
+        <!--                    &lt;!&ndash;            <li class="page-item active"><a style="background-color: #8B60C7" class="page-link" href="#">2</a></li>&ndash;&gt;-->
+        <!--                    &lt;!&ndash;            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">3</a></li>&ndash;&gt;-->
+        <!--                </div>-->
+        <!--                <li class="page-item">-->
+        <!--                    <a style="color: #8B60C7" class="page-link" href="#" aria-label="Next">-->
+        <!--                        <span aria-hidden="true">&raquo;</span>-->
+        <!--                    </a>-->
+        <!--                </li>-->
+        <!--            </ul>-->
+        <!--        </nav>-->
     </div>
 </div>
 <script th:inline="javascript">
