--- a/src/main/resources/templates/admin/seller-management.html
+++ b/src/main/resources/templates/admin/seller-management.html
@@ -148,11 +148,12 @@
                     <td th:text="${requestSeller.address} + ' ' + ${requestSeller.detailAddress}"></td>
                     <td>
                         <div class="sellerManagementBtn">
-                            <form th:action="@{'/api/admin/seller-managements/' + ${requestSeller.id}}"
+                            <form th:action="@{'/admin/templates/seller-managements/' + ${requestSeller.id}}"
                                   th:method="post">
                                 <input type="submit" class="btn" value="승인">
                             </form>
-                            <form th:action="@{'/api/admin/seller-managements/' + ${requestSeller.id}}" th:method="put">
+                            <form th:action="@{'/admin/templates/seller-managements/' + ${requestSeller.id}}"
+                                  th:method="put">
                                 <button type="submit" class="btn" value="거절">거절</button>
                             </form>
                         </div>
