--- a/src/main/resources/templates/seller/seller.html
+++ b/src/main/resources/templates/seller/seller.html
@@ -13,6 +13,7 @@
             crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
+    <script type="text/javascript" th:src="@{/js/seller.js}"></script>
 </head>
 <body>
 <header>
@@ -22,9 +23,7 @@
     <nav>
         <ul>
             <a href="/">판매자 님</a>
-            <a th:href="@{/api/seller/logout}" th:method="get" enctype="multipart/form-data">
-                <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
-            </a>
+            <a href="#" onclick="sendTokenDeleteSeller();">Logout</a>
         </ul>
     </nav>
 </header>
