--- a/src/main/resources/templates/seller/event-update-creator.html
+++ b/src/main/resources/templates/seller/event-update-creator.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>쿠폰생성자 수정</title>
 </head>
@@ -21,5 +23,14 @@
     <input type="datetime-local" id="expireDate" name="expireDate"><br>
     <button type="submit">등록</button>
 </form>
+<script th:inline="javascript">
+    const token = [[${accessToken}]];
+    if (token) {
+        document.cookie =
+            'Authorization' + "=" + token + "; " +
+            "path=/; expires=" + (new Date().getTime() + 30 * 60000) + ";";
+    }
+</script>
 </body>
+
 </html>
