--- a/src/main/resources/templates/seller/menu-update.html
+++ b/src/main/resources/templates/seller/menu-update.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <title>메뉴수정</title>
 </head>
@@ -17,5 +18,13 @@
     <input type="file" id="image" name="image"><br>
     <button type="submit">등록</button>
 </form>
+<script th:inline="javascript">
+    const token = [[${accessToken}]];
+    if (token) {
+        document.cookie =
+            'Authorization' + "=" + token + "; " +
+            "path=/; expires=" + (new Date().getTime() + 30 * 60000) + ";";
+    }
+</script>
 </body>
 </html>
