[refactor] 불필요한 코드 제거

--- a/src/main/resources/templates/admin/register.html
+++ b/src/main/resources/templates/admin/register.html
@@ -67,8 +67,9 @@
 
 
             <input type="submit" value="register" class="btn btn-primary btn-block">
-            <span style="margin-top: 10px">Already have an account <a class="linkControl"
-                                                                      th:href="@{/admin/templates/login}">Login here</a></span>
+            <span style="margin-top: 10px">Already have an account
+                <a class="linkControl" th:href="@{/admin/templates/login}">Login here</a>
+            </span>
         </form>
     </div>
 </div>
